--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server &",
+    "transformCSV": "node source/songsFilter.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
